# ChatGPTBotMaster

./: .gitignore  Dockerfile  pyproject.toml
chatgptbot/: auth.py  chatbot.py  command.py  help.txt  session_storage.py  settings.py  umnobot.py
